implemented all endpoints on swagger UI
